// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RepositoryCard matches snapshot when favorite 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderColor": "#C6C6C8",
      "borderRadius": 12,
      "borderWidth": 1,
      "marginBottom": 12,
      "opacity": 1,
      "padding": 16,
    }
  }
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 8,
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "marginRight": 12,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#000000",
            "fontSize": 18,
            "fontWeight": "600",
            "marginBottom": 4,
          }
        }
      >
        test-repo
      </Text>
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#3C3C43",
            "fontSize": 14,
          }
        }
      >
        algorand
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#F2F2F7",
          "borderRadius": 20,
          "height": 40,
          "justifyContent": "center",
          "opacity": 1,
          "width": 40,
        }
      }
      testID="favorite-button"
    >
      <Text
        color="#FF3B30"
        name="heart"
        size={24}
        testID="icon"
      >
        heart
      </Text>
    </View>
  </View>
  <Text
    numberOfLines={2}
    style={
      {
        "color": "#3C3C43",
        "fontSize": 16,
        "lineHeight": 20,
        "marginBottom": 12,
      }
    }
  >
    Test repository description
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <Text
        color="#8E8E93"
        name="star"
        size={16}
        testID="icon"
      >
        star
      </Text>
      <Text
        style={
          {
            "color": "#8E8E93",
            "fontSize": 14,
          }
        }
      >
        100
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 6,
              "height": 12,
              "width": 12,
            },
            {
              "backgroundColor": "#007AFF",
            },
          ]
        }
      />
      <Text
        style={
          {
            "color": "#8E8E93",
            "fontSize": 14,
          }
        }
      >
        TypeScript
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <Text
        color="#8E8E93"
        name="git-branch"
        size={16}
        testID="icon"
      >
        git-branch
      </Text>
      <Text
        style={
          {
            "color": "#8E8E93",
            "fontSize": 14,
          }
        }
      >
        10
      </Text>
    </View>
  </View>
</View>
`;

exports[`RepositoryCard matches snapshot when not favorite 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderColor": "#C6C6C8",
      "borderRadius": 12,
      "borderWidth": 1,
      "marginBottom": 12,
      "opacity": 1,
      "padding": 16,
    }
  }
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 8,
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "marginRight": 12,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#000000",
            "fontSize": 18,
            "fontWeight": "600",
            "marginBottom": 4,
          }
        }
      >
        test-repo
      </Text>
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#3C3C43",
            "fontSize": 14,
          }
        }
      >
        algorand
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#F2F2F7",
          "borderRadius": 20,
          "height": 40,
          "justifyContent": "center",
          "opacity": 1,
          "width": 40,
        }
      }
      testID="favorite-button"
    >
      <Text
        color="#000000"
        name="heart-outline"
        size={24}
        testID="icon"
      >
        heart-outline
      </Text>
    </View>
  </View>
  <Text
    numberOfLines={2}
    style={
      {
        "color": "#3C3C43",
        "fontSize": 16,
        "lineHeight": 20,
        "marginBottom": 12,
      }
    }
  >
    Test repository description
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <Text
        color="#8E8E93"
        name="star"
        size={16}
        testID="icon"
      >
        star
      </Text>
      <Text
        style={
          {
            "color": "#8E8E93",
            "fontSize": 14,
          }
        }
      >
        100
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 6,
              "height": 12,
              "width": 12,
            },
            {
              "backgroundColor": "#007AFF",
            },
          ]
        }
      />
      <Text
        style={
          {
            "color": "#8E8E93",
            "fontSize": 14,
          }
        }
      >
        TypeScript
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <Text
        color="#8E8E93"
        name="git-branch"
        size={16}
        testID="icon"
      >
        git-branch
      </Text>
      <Text
        style={
          {
            "color": "#8E8E93",
            "fontSize": 14,
          }
        }
      >
        10
      </Text>
    </View>
  </View>
</View>
`;
